# student_management_api

./: app.py  main.py  pyproject.toml  readme.md  requirements.txt
api/v1/: __init__.py
api/v1/models/: __init__.py  course.py  enrollment.py  student.py  user.py
api/v1/resources/: course.py  enrollment.py  grade.py  student.py  user.py
api/v1/utils/: authUtil.py
instance/: student.db
tests/: conftest.py  dconftest.py  test_app.py
