[tool.poetry]
name = "sms"
version = "0.1.0"
description = "student management system"
authors = ["Nana Kwame"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask-restx = "^1.1.0"
flask-jwt-extended = "^4.4.4"
sqlalchemy = "1.4.46"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
